Add basic 2-player game

--- a/css/style.css
+++ b/css/style.css
@@ -25,12 +25,22 @@ body {
 
 }
 
+div {
+  border: solid black 2px;
+  height: 100px;
+}
 
 /******************************************
 /* LAYOUT
 /*******************************************/
 header {
 
+}
+
+.gameboard {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
 }
 
 footer {
